Update spotbugs and checkstyle
Signed-off-by: Stanislav Knot <sknot@redhat.com>